2-Aug morning commit

--- a/exam_app/templates/dashboard/Result.html
+++ b/exam_app/templates/dashboard/Result.html
@@ -255,7 +255,7 @@ input[type="date"]:focus {
 
 <div class="container">
   <div class="col-12 mt-2 dashboard-header">
-    <h2 class=" my-4 dashboard-title">Result</h2>
+    <h2 class=" my-4 dashboard-title">Results</h2>
   </div>
   <div class="row mb-3">
     <form method="GET">
