--- a/exam_app/templates/dashboard/skill_set_config.html
+++ b/exam_app/templates/dashboard/skill_set_config.html
@@ -216,7 +216,7 @@
 </head>
 <div class="container">
   <div class="col-12 mt-2 dashboard-header">
-    <h2 class=" my-4 dashboard-title">Skill Configuration</h2>
+    <h2 class=" my-4 dashboard-title">Skill Set Configuration</h2>
   </div>
   <a href="{% url 'create_Skill' %}" class="btn btn-primary mb-4">Add Skill</a>
   <form method="GET">
