--- a/exam_app/templates/exam_portal/introcheckpage.html
+++ b/exam_app/templates/exam_portal/introcheckpage.html
@@ -109,7 +109,7 @@
     <audio id="microphone-preview" autoplay></audio>
     <div id="microphone-controls">
       <button id="start-microphone-check">Start Microphone Check</button>
-      <button id="stop-microphone-check">Stop Microphone Check</button>
+      {% comment %} <button id="stop-microphone-check">Stop Microphone Check</button> {% endcomment %}
     </div>
 
     <div class="status-container" id="camera-status"></div>
