--- a/exam_app/templates/dashboard/candidatedata.html
+++ b/exam_app/templates/dashboard/candidatedata.html
@@ -109,10 +109,10 @@ a:link {
             </div>
             <div class="card-body">
               <p class="mb-1"><strong class="pr-1">Candidate ID : </strong>{{candidate_data.0}}</p>
-              <p class="mb-1"><strong class="pr-1">Applied for : </strong>{{candidate_data.61 }}</p>
+              <p class="mb-1"><strong class="pr-1">Job Position : </strong>{{candidate_data.61 }}</p>
               <p class="mb-1"><strong class="pr-1">Email : </strong>{{ candidate_data.6 }}</p>
               <p class="mb-1"><strong class="pr-1">Date of Birth : </strong>{{ candidate_data.3 }}</p>
-              <p class="mb-1"><strong class="pr-1">Refered by : </strong>{{ candidate_data.18 }}</p>
+              <p class="mb-1"><strong class="pr-1">Referred by : </strong>{{ candidate_data.18 }}</p>
               <p class="mb-1"><strong class="pr-1">Attended Prevesely : </strong><span>{% if  candidate_data.21 == 1 %}Yes{% else %}No{% endif %}</span></p>
               <p class="mb-1"><strong class="pr-1">ID Submitted : </strong>{{ candidate_data.50 }} </p>
               <p class="mb-1"><strong class="pr-1">Applied Date : </strong>{{ candidate_data.22 }}</p>
@@ -154,7 +154,7 @@ a:link {
                 <tr>
                   <th width="30%">Material Status</th>
                   <td width="2%">:</td>
-                  <td>{{ candidate_data.9 }}</td>
+                  <td>{% if  candidate_data.9 == Yes %}Married{% else %}Single{% endif %}</td>
                 </tr>
               </table>
             </div>
