3-Aug morning commit

--- a/exam_app/templates/dashboard/candidate_dashboard.html
+++ b/exam_app/templates/dashboard/candidate_dashboard.html
@@ -570,7 +570,7 @@ input[type="date"]:focus {
         <tr>
           <td>{{ forloop.counter }}</td>
           <td style="text-align: left;"><a href="{% url 'show_candidate_data' id=candidate.0 %}">{{ candidate.3 }}</a></td>
-          <td style="text-align: left;">{{ candidate.4 }}</td>
+          <td>{{ candidate.0 }}</td>
           <td>{{ candidate.5 }}</td>
           <td style="text-align: left;">{{ candidate.6 }}</td>
           <td>{{ candidate.7 }}</td>
