8-Aug morning commit

--- a/exam_app/templates/dashboard/job_positions.html
+++ b/exam_app/templates/dashboard/job_positions.html
@@ -234,7 +234,7 @@
           <th>S.No</th>
           <th>Job Position</th>
           <th>Active</th>
-          <th>Action</th>
+          <th>Actions</th>
         </tr>
       </thead>
       <tbody>
