--- a/exam_app/templates/dashboard/quest_bank.html
+++ b/exam_app/templates/dashboard/quest_bank.html
@@ -324,7 +324,7 @@
       </div>
     </form>     
   <div style="height: 55vh; overflow-y: auto; margin:20px; overflow:auto">
-    <table class="table table-bordered text-center custom-scrollbar">
+    <table class="table table-bordered text-center">
       <thead class="sticky-thead">
         <tr>
           <th>S.NO</th>
