--- a/exam_app/templates/dashboard/skill_set_config.html
+++ b/exam_app/templates/dashboard/skill_set_config.html
@@ -241,13 +241,13 @@
     </div>
   </form>
 
-  <div class="table-responsive"  style="height: 50vh; overflow-y: auto; overflow-x: auto;">
+  <div >
     <table class="table table-bordered text-center" >
       <thead class="sticky-thead">
         <tr>
           <th>S.No</th>
           <th>Job Position</th>
-          <th>Subject</th>
+          <th>SKill</th>
           <th>Level</th>
           <th>No. of Questions</th>
           <th>Cutoff Marks</th>
