--- a/exam_app/templates/dashboard/subject.html
+++ b/exam_app/templates/dashboard/subject.html
@@ -234,9 +234,9 @@
       <thead class="sticky-thead">
         <tr>
           <th>S.No</th>
-          <th>Subject</th>
+          <th>Skill</th>
           <th>Active</th>
-          <th>Action</th>
+          <th>Actions</th>
         </tr>
       </thead>
       <tbody>
