--- a/exam_app/templates/dashboard/candidatedata.html
+++ b/exam_app/templates/dashboard/candidatedata.html
@@ -113,7 +113,7 @@ a:link {
               <p class="mb-1"><strong class="pr-1">Email : </strong>{{ candidate_data.6 }}</p>
               <p class="mb-1"><strong class="pr-1">Date of Birth : </strong>{{ candidate_data.3 }}</p>
               <p class="mb-1"><strong class="pr-1">Referred by : </strong>{{ candidate_data.18 }}</p>
-              <p class="mb-1"><strong class="pr-1">Attended Prevesely : </strong><span>{% if  candidate_data.21 == 1 %}Yes{% else %}No{% endif %}</span></p>
+              <p class="mb-1"><strong class="pr-1">Attended Previously : </strong><span>{% if  candidate_data.21 == 1 %}Yes{% else %}No{% endif %}</span></p>
               <p class="mb-1"><strong class="pr-1">ID Submitted : </strong>{{ candidate_data.50 }} </p>
               <p class="mb-1"><strong class="pr-1">Applied Date : </strong>{{ candidate_data.22 }}</p>
             </div>
@@ -152,7 +152,7 @@ a:link {
                   <td>{{ candidate_data.8 }}</td>
                 </tr>
                 <tr>
-                  <th width="30%">Material Status</th>
+                  <th width="30%">Marital Status</th>
                   <td width="2%">:</td>
                   <td>{% if  candidate_data.9 == Yes %}Married{% else %}Single{% endif %}</td>
                 </tr>
