subject changed as skill

--- a/exam_app/templates/dashboard/add_quest.html
+++ b/exam_app/templates/dashboard/add_quest.html
@@ -60,9 +60,9 @@
         <div class="form-group row mb-4">
           
           <div class="col-sm-6">
-            <label class="col-sm-6 col-form-label">Subject:</label>
+            <label class="col-sm-6 col-form-label">Skill:</label>
             <select class="form-control" name="subject" required>
-              <option value="">-- Select Subject --</option>
+              <option value="">-- Select Skill --</option>
               {% for subject in subjects %}
                 <option value="{{subject.0}}">{{subject.1}}</option>
               {% endfor %}
