--- a/exam_app/templates/dashboard/subject.html
+++ b/exam_app/templates/dashboard/subject.html
@@ -257,7 +257,7 @@
                     <div
                       class="d-flex justify-content-between align-items-center w-100"
                     >
-                      <h5 class="modal-title mb-0">Edit Subject</h5>
+                      <h5 class="modal-title mb-0">Edit Skill</h5>
                     </div>
                     <div class="">
                       <button
@@ -272,7 +272,7 @@
                     <form method="POST" action="{% url 'edit_subject' id=subject.0 %}">
                       {% csrf_token %}
                       <div class="mb-3 d-flex flex-column align-items-center">
-                        <label for="subject" class="form-label">Subject</label>
+                        <label for="subject" class="form-label">Skill</label>
                         <input type="text" class="form-control" id="subject" name="subject" value="{{subject.1}}">
                       </div>
                       <button type="submit" class="btn btn-primary">Save changes</button>
