10-Aug evening commit

--- a/exam_app/templates/dashboard/quest_bank.html
+++ b/exam_app/templates/dashboard/quest_bank.html
@@ -376,7 +376,7 @@
                     {% csrf_token %}
                     <div class="row mb-3">
                       <div class="col-md-6">
-                        <label for="subject" class="form-label">Subject</label>
+                        <label for="subject" class="form-label">Skill</label>
                         <select class="form-select" name="subject">
                           <option value="{{ question.9 }}">{{ question.1 }}</option>
                           {% for subject in subjects %}
