--- a/exam_app/templates/dashboard/skill_set_config.html
+++ b/exam_app/templates/dashboard/skill_set_config.html
@@ -308,7 +308,7 @@
                                 </select>
                             </div>
                                   <div class="mb-3 d-flex flex-column align-items-center">       
-                                      <label for="subjects" class="form-label">Subject</label> 
+                                      <label for="subjects" class="form-label">Skill</label> 
                                   <select class="form-control" id="subjects" name="subjects" disabled> 
                                             <option value="{{skill.8}}" selected >{{skill.2}}</option> 
                                                   {% for subject in subjects %}        
