--- a/exam_app/templates/registration/registration.html
+++ b/exam_app/templates/registration/registration.html
@@ -228,7 +228,7 @@
                     <div class="container">
                         <div class="col-md-4">
                             <label class="input-label" for="Applyingfor">   
-                            Applying for<span style="color:red">*</span>
+                            Job Positions<span style="color:red">*</span>
                             </label>  
                             <select id="Applyingfor" name="Applyingfor" required >
                                 <option value="" disabled selected hidden>Select option</option>
