11-Aug evening commit

--- a/exam_app/templates/dashboard/add_quest.html
+++ b/exam_app/templates/dashboard/add_quest.html
@@ -53,6 +53,7 @@
 </head>
 <div class="container">
   <h4 class="mb-4 m-2">New Question</h4>
+  <p style="color: red">{{error}}</p>
   <div class="card" style="background-color:#f8f9fa;">
     <div class="card-body">
       <form method="POST">
