--- a/exam_app/templates/dashboard/job_positions.html
+++ b/exam_app/templates/dashboard/job_positions.html
@@ -271,7 +271,7 @@
                       {% csrf_token %}
                       <div class="mb-3 d-flex flex-column align-items-center">
                         <label for="job_position" class="form-label">Job Position</label>
-                        <input type="text" class="form-control" id="jobpos" name="job_position" value="{{job.1}}" disabled>
+                        <input type="text" class="form-control" id="jobpos" name="job_position" value="{{job.1}}">
                       </div>
                       <div class="mb-3 d-flex flex-column align-items-center">
                         <label for="is_option_req" class="form-label">Is Non CS</label>
